--- a/tesi.bib
+++ b/tesi.bib
@@ -5,6 +5,13 @@ journal={phrack},
 year={96},
 }
 
+@misc{dullien-09,
+title = {REIL: A platform-independent intermediate representation
+of disassembled code for static code analysis},
+author = {Thomas Dullien, Sebastian Porst},
+year = {2009}
+}
+
 @inproceedings{schwartz-2011,
    author = {Edward J. Schwartz and Thanassis Avgerinos and David Brumley},
    title = {{Q}: Exploit Hardening Made Easy},
@@ -57,7 +64,6 @@ address = {Berkeley, CA}
 }
 
 @MISC{pddl-97,
-    author = { },
     title = {PDDL - The Planning Domain Definition Language},
     year = 1997
 }
@@ -70,7 +76,6 @@ url={http://www.muppetlabs.com/~breadbox/software/elfkickers.html},
 @MISC{stackpatch,
     author = {Solar Designer},
 url={http://www.openwall.com/linux},
-    year = {}
 }
 
 
@@ -131,7 +136,6 @@ year={},
 @TECHREPORT{Checkoway-10,
     author = {Stephen Checkoway and Hovav Shacham},
     title = {Escape from return-oriented programming: Returnoriented programming without returns (on the x86},
-    institution = {},
     year = {2010}
 }
 
