--- a/architettura.tex
+++ b/architettura.tex
@@ -586,7 +586,7 @@ questa catalogazione deve essere poi verificata con un'analisi
 semantica vera e propria.
 
 Le simulazioni vengono effettuate utilizzando dati concreti ma una
-simulazione simbolica, funzionalità ancora non disponibile all'interno
+esecuzione simbolica, funzionalità ancora non disponibile all'interno
 del framework BARF, consentirebbe una catalogazione più accurata
 esplicitando le relazioni tra i valori che i registri hanno all'inizio
 e alla fine della simulazione o tra i valori iniziali dei registri e
