--- a/tesi.tex
+++ b/tesi.tex
@@ -26,7 +26,8 @@ tabsize=2,                % sets default tabsize to 2 spaces
 captionpos=b,                   % sets the caption-position to bottom
 breaklines=true,                % sets automatic line breaking
 breakatwhitespace=false,        % sets if automatic breaks should only happen at whitespace
-stringstyle=\footnotesize,
+stringstyle=\footnotesize\ttfamily,
+basicstyle=\footnotesize\ttfamily,
 }
 
 %-----------------------------------------------------------------
