--- a/architettura.tex
+++ b/architettura.tex
@@ -7,7 +7,7 @@ sviluppo di Dropper.
 
 L'obiettivo di Dropper è quello di generare, analizzando un file
 oggetto eseguibile, il payload corrispondente ad una catena di gadget
-che se iniettata nello stack dell'immagine del processo associato a
+che se iniettato nello stack dell'immagine del processo associato a
 quell'eseguibile, consente di prenderne il controllo, eseguendo un
 comando arbitrario sulla macchina. Lo strumento applica tecniche note
 per eludere misure di protezioni esistenti come la casualizzazione
@@ -26,8 +26,8 @@ facilmente superate nelle future versioni grazie all'astrazione data
 dall'utilizzo di un linguaggio intermedio per rappresentare le
 istruzioni.
 
-Una tipica sessione di Dropper può essere grossolanamente divisa in
-quattro fasi:
+Una tipica sessione dell'utilizzo di Dropper può essere
+grossolanamente divisa in quattro fasi:
 
 \begin{enumerate}
 \item Analisi del binario 
@@ -51,7 +51,7 @@ intermedio anziché sulle istruzioni dell'architettura vera e propria
 porta una serie di vantaggi:
 
 \begin{itemize}
- \item le operazioni di analisi vengono estratte e rese
+ \item le operazioni di analisi vengono astratte e rese
    indipendenti dalla specifica architettura. In questo modo è
    possibile aggiungere il supporto di altre architetture allo
    strumento in modo molto più semplice, operazione che si riduce a
@@ -89,8 +89,8 @@ Dropper si basa sia su alcune informazioni che fornisce l'utente in
 merito all'errore che si sta sfruttando (ad esempio se può controllare
 un file descriptor, se ci sono limiti nella dimensione del payload o
 nei caratteri ammessi) sia su quelle ricavate dalla prima fase di
-analisi dell'eseguibile. Dev'essere semplice poter aggiungere nuove
-strategie.
+analisi dell'eseguibile. Dev'essere semplice estendere Dropper con
+nuove strategie.
 
 L'ultima fase si occupa di assemblare gli indirizzi dei gadget e
 valori concreti per la generazione di un payload che, una volta
@@ -153,9 +153,10 @@ l'utente troviamo:
   \item La possibilità da parte dell'utente di controllare un file
     descriptor
   \item I file oggetto condivisi utilizzati dall'eseguibile sulla
-    macchina dove si intende far eseguire la catena (per la
-    ricavazione degli offset da utilizzare nelle tecniche di
-    sovrascrizione della GOT vedi sez. \ref{sec:expl})
+    macchina dove si intende far eseguire la catena. Questi file
+    vengono analizzati al fine di ricavarne gli offset da utilizzare
+    nelle tecniche di sovrascrizione della GOT (vedi
+    sez. \ref{sec:expl})
   \item Eventuali caratteri che non possono comparire all'interno del
     payload
   \item Eventuali limiti sulla lunghezza del payload
@@ -168,9 +169,9 @@ Gadgets le sequenze di gadget necessarie. Lo schema principale
 delle varie strategie, si può dividere in due fasi: 
 
 \begin{inparaenum}[1)]
-\item preparare gli argomenti per eseguire una chiamata ad una
-  funzione di libreria che ci consenta di eseguire un comando
-  arbitrario (\lstinline{execve} o \lstinline{system}) e
+\item preparare e scrivere in memoria gli argomenti per eseguire una
+  chiamata ad una funzione di libreria che ci consenta di eseguire un
+  comando arbitrario (\lstinline{execve} o \lstinline{system}) e
 \item eseguire quella
 funzione.
 \end{inparaenum}
@@ -190,19 +191,19 @@ scrivere in memoria sono:
   dati nell'area di memoria di destinazione. Dropper fornisce i valori
   da ``inserire'' nello stream dati del file descriptor. L'attaccante
   deve fare in modo che quando la funzione \lstinline{read} venga
-  richiamata siano letti dal file descriptor proprio quei dati.
+  richiamata siano letti dal file descriptor proprio quei dati
 
 \item Utilizzo di catene di gadget che consentano di scrivere valori
   costanti in memoria. Per poter utilizzare questa tecnica devono
   essere disponibili i gadget delle categorie necessarie, in più i
   valori da caricare in memoria non devono presentare caratteri che
   non possono essere presenti nel payload. In questa tecnica i dati
-  non vengono scritti tutti in una volta ma a chunk di alcuni bytes
-  per volta (a seconda dell'architettura o del tipo di gadget). A
-  seconda del tipo di gadget per ognuna di queste iterazioni è
-  necessario inserire nel payload un certo numero di bytes di
-  ``padding''. Per questi motivi l'utilizzo di questa tecnica tende a
-  generare payload piuttosto lunghi.
+  non vengono scritti tutti in insieme ma a chunk di alcuni bytes per
+  volta (a seconda dell'architettura o del tipo di gadget). A seconda
+  del tipo di gadget per ognuna di queste iterazioni è necessario
+  inserire nel payload un certo numero di bytes di ``padding''. Per
+  questi motivi l'utilizzo di questa tecnica tende a generare payload
+  piuttosto lunghi
 
 \item Utilizzo delle funzioni \lstinline{strcpy} o \lstinline{memcpy}
   per copiare byte presenti in posizioni note all'interno
@@ -248,10 +249,10 @@ l'architettura di Dropper sono:
     tipo forza bruta per ricavare questi offset
 
   \item Come visto in \ref{sec:expl} per poter utilizzare la tecnica
-    di \lstinline{GOT patching} il binario deve presentare una
-    sequenza di gadget che ci consenta di eseguire un'operazione di
-    somma (o un'operazione che ci consenta di simulare una somma, come
-    una sottrazione) tra un offset di tre/quattro byte e un'area di
+    di GOT patching il binario deve presentare una sequenza di gadget
+    che ci consenta di eseguire un'operazione di somma (o
+    un'operazione che ci consenta di simulare una somma, come una
+    sottrazione) tra un offset di tre/quattro byte e un'area di
     memoria arbitraria (l'area dove è memorizzato l'indirizzo della
     funzione usata come riferimento, solitamente nella GOT). Molto
     spesso però abbiamo gadget che ci consentono di addizionare solo
@@ -260,13 +261,16 @@ l'architettura di Dropper sono:
     riporto tra un byte e il successivo. Un modo per risolvere questo
     problema è utilizzare gadget che utilizzino un'istruzione di tipo
     \lstinline{adc} (add with carry), facendo attenzione che gli
-    effetti secondari degli altri gadget non vadano a modificare il
-    carry flag. In realtà anche non avendo a disposizione questo tipo
-    di gadget, per via dell'allineamento in memoria, gli ultimi bit
-    dell'indirizzo di una funzione non variano tra un'esecuzione e la
-    successiva. Con questa parziale conoscenza del valore iniziale si
-    può comunque creare una catena con un alta percentuale di successo
-    come descritto in \ref{sec:arithmeticstore}
+    effetti secondari degli altri gadget coinvolti nella catena non
+    vadano a modificare il carry flag. Quest'istruzione viene
+    utilizzata proprio per le addizioni multi-byte e aggiunge anche il
+    valore del carry flag quando esegue l'operazione di somma. In
+    realtà anche non avendo a disposizione questo tipo di gadget, per
+    via dell'allineamento in memoria, gli ultimi bit dell'indirizzo di
+    una funzione non variano tra un'esecuzione e la successiva. Con
+    questa parziale conoscenza del valore iniziale si può comunque
+    creare una catena con un alta percentuale di successo come
+    descritto nella sezione \ref{sec:arithmeticstore}
 \end{itemize}
 
 È interessante notare come, anche se vi è una guida nelle operazioni
@@ -281,8 +285,7 @@ con un approccio programmatico, tutte le combinazioni vanno codificate
 nell'algoritmo, una procedura la cui completezza è più difficile da
 dimostrare e che è molto più soggetta ad errori.
 
-\subsection{Utilizzo di pianificatori per la costruzione della
-  catena}
+\subsection{Utilizzo di pianificatori}
 \label{sec:pddl}
 
 Il problema di generare una catena (quindi una sequenza) di gadget
@@ -290,36 +293,37 @@ Il problema di generare una catena (quindi una sequenza) di gadget
 sistema desiderato si traduce naturalmente in un problema di
 planning. Una volta tradotto si può utilizzare un planner per ottenere
 una soluzione valida e/o (dipende dal planner che si utilizza)
-ottima. PDDL \cite{pddl-97,fox-03} è un linguaggio che ha come
+ottima.
+
+Nel 1998 Drew McDermott rilascia il Planning Domain Description
+Language (PDDL) \cite{pddl-97,fox-03}, un linguaggio che ha come
 obiettivo quello di fornire uno strumento universale per codificare
 problemi di planning. In questa sezione esamineremo un primo approccio
-che può essere utilizzato per tradurre il nostro problema nel
-linguaggio PDDL, analizzandone i principali problemi. Il linguaggio
-PDDL è fatto in modo da separare la descrizione del dominio del
-problema da quella della singola istanza del problema. 
-
+che può essere utilizzato per tradurre alcuni dei problemi affrontati
+da Dropper nel linguaggio PDDL, analizzandone le principali
+problematiche. Il linguaggio PDDL è fatto in modo da separare la
+descrizione del dominio del problema da quella della singola istanza.
 
 Gli elementi che possono essere descritti all'interno della codifica
 del dominio del problema rilevanti al fine della nostra discussione sono:
 \begin{itemize}
 \item I diversi tipi di oggetto presenti nel nostro dominio
-\item \emph{Costants}, cioè oggetti che sono presenti in tutte le istanze del problema
-\item I vari \emph{Fluents}. Un \emph{fluents} è un mapping tra una
-  tupla di oggetti e un valore numerico che può cambiare durante un
-  piano. La loro sintassi e semantica è stata stabilizzata nel
-  linguaggio in \cite{fox-03}
-\item Le azioni. Ogni azione può avere dei parametri e definisce
+\item \emph{Costant}, cioè oggetti che sono presenti in tutte le istanze del problema
+\item \emph{Fluent}, mapping tra una tupla di oggetti e un valore
+  numerico che può cambiare durante un piano. La loro sintassi e
+  semantica è stata stabilizzata nel linguaggio in \cite{fox-03}
+\item \emph{azioni}. Ogni azione può avere dei parametri e definisce
   l'insieme delle possibili modifiche che possono essere effettuate
   nel dominio modellato. Per ogni azione si indicano le precondition
   (ovver condizioni necessarie per effettuare un'azione) e gli effetti
-  che le azioni hanno sugli oggetti del dominio o su i fluents 
+  che le azioni hanno sugli oggetti del dominio o su i fluent
 \end{itemize}
 
 Una singola istanza del problema invece definisce gli oggetti che le
 azioni possono manipolare, lo stato iniziale nel quale si trova il
-sistema, lo stato che vogliamo raggiungere (il nostro \emph{goal}) e
+sistema, lo stato che vogliamo raggiungere (il nostro ``goal'') e
 la metrica con la quale valutare la bontà di un piano.  Come
-evidenziato in \cite{fox-03} i fluents non possono essere utilizzati
+evidenziato in \cite{fox-03} i fluent non possono essere utilizzati
 come parametri di azioni perché queste agiscono su oggetti ``fisici''
 e quindi i parametri devono appartenere ad insiemi finiti (e non ad
 insiemi infiniti come i numeri). 
@@ -328,34 +332,34 @@ Per ovviare a questa limitazione nella nostra modellazione
 utilizzeremo come stratagemma quello di creare degli oggetti di tipo
 \lstinline{imm} e di associargli un valore tramite il fluent
 \lstinline{val (?x - imm)}. Questo fa si che le azioni possono
-utilizzare parametri di tipo imm e che negli effetti possiamo ricavare
-il valore che l'oggetto di tipo imm rappresenta. Questo ci obbliga,
-nell'istanza del problema, a definire tutti i valori numerici che
-saranno presenti nel piano come oggetti di tipo imm e ad associare per
-ognuno di essi il relativo fluents.
+utilizzare parametri di tipo \lstinline{imm} e che negli effetti
+possiamo ricavare il valore che l'oggetto di tipo \lstinline{imm}
+rappresenta. Questo ci obbliga, nell'istanza del problema, a definire
+tutti i valori numerici che saranno presenti nel piano come oggetti di
+tipo \lstinline{imm} e ad associare per ognuno di essi il relativo
+fluent.
 
 I tipi di dato utilizzati nella modellazione sono \lstinline{imm}, con
 il significato appena spiegato, e \lstinline{register} che rappresenta
 per l'appunto un registro. I fluent utilizzati invece sono:
 
 \begin{itemize}
-\item (val ?x - imm) come appena definito
-\item (reg ?r - register) che rappresenta il valore attuale del
+\item \lstinline{(val ?x - imm)} come appena definito
+\item \lstinline{(reg ?r - register)} che rappresenta il valore attuale del
   registro ?r
-\item (mem ?a - imm) che rappresenta il valore attuale della locazione
-  di memoria ?a
+\item \lstinline{(mem ?a - imm)} che rappresenta il valore attuale
+  della locazione di memoria \lstinline{?a}
 \end{itemize}
 
 Vengono create tante costanti quante i registri.  Ogni azione invece
 corrisponde ad un gadget e le azioni riflettono gli effetti che il
-gadget ha sui registri e sulla memoria.  Attualmente si è proceduto a
+gadget ha su i registri e sulla memoria.  Attualmente si è proceduto a
 modellare solo gadget per l'impostazione di registri o la scrittura di
 memoria. È da notare che per lo stratagemma usato tutti i valori
 (indirizzi e valori concreti) che le nostre azioni vanno ad utilizzare
 devono essere esplicitati. Un gadget per l'impostazione di un registro
 viene tradotto in questo modo (a meno dei puntini utilizzati per
-generalizzare la lista dei registri che è possibile impostare
-attraverso il gadget):
+generalizzare la lista dei registri):
 
 \begin{lstlisting}
   (:action regset_gadget
@@ -387,27 +391,31 @@ per la scrittura in memoria è leggermente più complicata:
 \end{lstlisting}
 
 Questa modellazione poco elegante è dovuta al non poter utilizzare i
-fluents come argomenti per altri fluents.  Una volta tradotto il
-dominio, si crea un'istanza del problema. Si specificano gli oggetti
-che faranno parte dell'istanza del problema, cioè i valori che andremo
-ad utilizzare. Come stato iniziale si impostano i fluents dei registri
-a zero, si assegnano i rispettivi valori ai fluents di tipo (val ?v -
-imm) e si setta anche il fluent \lstinline{stack-length} a zero,
-quest'ultimo viene utilizzato come metrica per valutare la bontà del
-piano trovato. Come stato desiderato si imposta o, nel caso si voglia
-trovare un piano per settare un insieme di registri, che i fluent
-rilevanti di tipo (reg ?r) abbiano i valori desiderati o, nel caso
-invece si voglia trovare un piano per impostare alcune specifiche
-locazioni di memoria, che i fluents del tipo (mem ?a) abbiano il
-valore corrispondente. Un esempio, con la lista dei gadget accorciata
-per brevità è riportato nelle figure \ref{pddl:domain} e
+fluent come argomenti per altri fluent.
+
+Una volta tradotto il dominio, si deve anche tradurre un'istanza del
+problema. Si specificano gli oggetti che faranno parte dell'istanza
+del problema, cioè i valori che andremo ad utilizzare. Come stato
+iniziale si impostano i fluent dei registri a zero, si assegnano i
+rispettivi valori ai fluent di tipo \lstinline{(val ?v - imm)} e si
+imposta anche il fluent \lstinline{stack-length} a zero, quest'ultimo
+viene utilizzato come metrica per valutare la bontà del piano
+trovato. Come stato desiderato si imposta o, nel caso si voglia
+trovare un piano per impostare un insieme di registri, che i fluent
+rilevanti di tipo \lstinline{(reg ?r)} abbiano i valori desiderati o,
+nel caso invece si voglia trovare un piano per impostare alcune
+specifiche locazioni di memoria, che i fluent del tipo \lstinline{(mem
+  ?a)} abbiano il valore corrispondente. 
+
+Un esempio, con solo un piccolo sottoinsieme dei gadge trovati
+nell'eseguibile ls è riportato nelle figure \ref{pddl:domain} e
 \ref{pddl:facts}. L'esempio è generato tramite la classe
 \lstinline{planner}.
 
 La codifica appena presentata è molto banale e presenta alcuni
 problemi. Prima di tutto non considera i valori della memoria e dei
 registri come vettori di bit. Una soluzione potrebbe essere quella di
-modellare la granularità delle azioni (e dei fluents) al singolo
+modellare la granularità delle azioni (e dei fluent) al singolo
 byte. Anche se questo non consentirebbe di modellare azioni che
 effettuino operazioni di tipo bit a bit aumenterebbe di molto
 l'espressività della modellazione proposta. 
@@ -415,14 +423,14 @@ l'espressività della modellazione proposta.
 Il secondo problema è che una quantità di azioni grande quanto il
 numero di gadget presente nell'eseguibile rende l'utilizzo di planner
 general-purpose inefficiente. Nei primi test effettuati la maggior
-parte dei planner non riesce neanche a iniziare la fase di
-ricerca. Una soluzione potrebbe essere quella di filtrare i gadget in
+parte dei planner non riesce neanche a iniziare la fase di ricerca del
+piano. Una soluzione potrebbe essere quella di filtrare i gadget in
 una prima fase, in modo da fornire una quantità più limitata di azioni
 nella descrizione del problema.
 
 
-\begin{lstlisting}
-
+\begin{lstlisting}[caption=Descrizione del dominio relativo ad un 
+    piccolo sottoinsieme dei gadget presenti in ls,label=pddl:domain]
 ;gadget: 
 ;0x412050 : pop rsi; pop r15; ret
 ;0x412052 : pop rdi; ret
@@ -460,13 +468,12 @@ nella descrizione del problema.
       (= (val ?v) (reg rsi))) (assign (mem ?a) (val ?v))))
      (increase (stack-length) 0)))
 )
-
-
 \end{lstlisting}
-\label{pddl:domain}
 
 
-\begin{lstlisting}
+
+\begin{lstlisting}[caption=Descrizione del dominio relativo ad
+    un'istanza del problema,label=pddl:facts]
 (define (problem memset)
 (:domain dropper)
 (:objects v_32896 v_2 v_33153 v_3 - imm)
@@ -488,7 +495,6 @@ nella descrizione del problema.
 (:metric minimize (stack-length))
 )
 \end{lstlisting}
-\label{pddl:facts}
 
 
 \section{Modulo Gadgets}
@@ -533,14 +539,14 @@ formula del tipo:
 $$ x < y ∧ ¬(x < y + 0)$$
 
 spesso ci interessa conoscere se la formula sia soddisfacibile solo
-sotto i comuni significati delle funzioni $+$, dei predicati $<$ e
+sotto i comuni significati delle funzione $+$, dei predicato $<$ e
 della costante $0$, ovvero ci interessa conoscere la soddisfacibilità
 della formula rispetto alla teoria aritmetica degli interi. Anche se è
-possibile in ogni caso incorporare una serie di formule insieme alla
-formula di input in modo da forzare un risolutore generale a
-considerare solo le interpretazioni compatibili con una data teoria,
-le prestazioni computazionali ottenute in questo modo non risultano
-spesso accettabili.  Infatti sono state sviluppate diverse procedure
+possibile in ogni caso incorporare una serie di formule insieme a
+quelle che descrivono un problmea in modo da forzare un risolutore
+generale a considerare solo le interpretazioni compatibili con una
+data teoria, le prestazioni computazionali ottenute in questo modo non
+risultano spesso accettabili. Sono state sviluppate diverse procedure
 su misura per molte teorie tra cui quella degli array e dei bitvector,
 particolarmente rilevanti ai fini del nostro lavoro. Una volta che
 sono a disposizione queste teorie risulta naturale modellare registri
@@ -553,7 +559,7 @@ metodi di modellazione logici come \emph{Answer Set Programming}.
 Nelle figure \ref{cod:asm}, \ref{cod:reil} e \ref{cod:smt} sono
 mostrate rispettivamente le istruzioni di un gadget per la scrittura
 in memoria e le relative traduzioni in istruzioni REIL e in una
-formula smt.
+formula SMT.
 
 Un'analisi completa della semantica presenta alcuni limiti dovuti alla
 difficoltà di una modellazione completa del sistema nonché alla
@@ -585,12 +591,12 @@ effetti di solo un sottoinsieme dei possibili valori in ingresso,
 questa catalogazione deve essere poi verificata con un'analisi
 semantica vera e propria.
 
-Le simulazioni vengono effettuate utilizzando dati concreti ma una
-esecuzione simbolica, funzionalità ancora non disponibile all'interno
-del framework BARF, consentirebbe una catalogazione più accurata
-esplicitando le relazioni tra i valori che i registri hanno all'inizio
-e alla fine della simulazione o tra i valori iniziali dei registri e
-gli accessi alla memoria.
+Le simulazioni vengono effettuate utilizzando dati concreti ma
+un'esecuzione simbolica, funzionalità ancora non disponibile
+all'interno del framework BARF, consentirebbe una catalogazione più
+accurata esplicitando le relazioni tra i valori che i registri hanno
+all'inizio e alla fine della simulazione o tra i valori iniziali dei
+registri e gli accessi alla memoria.
 
 \subsection{Verifica e validazione}
 \label{sec:verifica_validazione}
@@ -630,8 +636,8 @@ tutte ricondotte alla seguente strategia generale:
   iniziali dei registri operandi
 \item si ricrea la rappresentazione del gadget in formule logiche ma
   forzando i valori dei registri iniziali ai valori ottenuti al punto
-  precedente e imponendo come condizione finale il complementare degli
-  effetti voluti
+  precedente e imponendo come condizione finale la formula che
+  rappresenta il complementare degli effetti voluti
 \item si verifica che il modello del punto precedente non sia
   soddisfacibile
 \end{enumerate}
@@ -643,8 +649,8 @@ impone che nel contesto finale che la locazione di memoria scelta
 cambi al valore casuale scelto. Si chiede a questo punto al risolutore
 se il sistema di formule ammette una soluzione. Se il sistema non
 ammette soluzione il gadget può essere scartato, in quanto non essendo
-usabile per i valori perde la sua generalità. Nel caso invece il
-sistema ammetta soluzione vengono richiesti al risolutore i valori
+usabile per i valori scelti perde la sua generalità. Nel caso invece
+il sistema ammetta soluzione vengono richiesti al risolutore i valori
 iniziali, all'interno del modello trovato, dei registri ``operandi''
 della funzione, quelli utilizzati per impostare indirizzo di
 destinazione e valore da scrivere. Si impongono poi al risolutore
@@ -665,8 +671,8 @@ quantificatori universali nelle formule, complicando di molto il
 lavoro del risolutore. Questo problema può essere risolto sia
 ripetendo queste verifiche al momento dell'utilizzo reale del gadget
 con i valori concretamente utilizzati sia esprimendo gli effetti in
-relazione ai valori iniziali, ad esempio utilizzando alla simulazione
-simbolica.
+relazione ai valori iniziali, utilizzando l'esecuzione simbolica per
+ricavare queste relazioni.
 
 \subsection{Verifica degli effetti secondari}  
 
@@ -736,7 +742,7 @@ manipolazione dello stack da parte del gadget stesso:
 \end{itemize}
 
 Le informazioni relative alle tre problematiche descritte sopra
-vengono estrapolate dal Modulo Gadgets. La procedura di generazione del
+vengono estrapolate dal modulo Gadgets. La procedura di generazione del
 payload è specifica del tipo di gadget, i metodi
 \lstinline{PayloadChunk.chain} e
 \lstinline{PayloadChunk.get_general_chunk} sono invece generici,
