--- a/conclusioni.tex
+++ b/conclusioni.tex
@@ -87,9 +87,9 @@ eseguibili contenuti nelle bin-utils (ls, echo, mv).
 
 Dropper ha prospettive di sviluppo su diversi fronti. 
 
-Sicuramente l'utilizzo di una simulazione simbolica semplificherebbe
-di molto l'analisi semantica, potendo verificare direttamente le
-relazioni tra valori in ingresso ed effetti dei gadget. 
+Sicuramente l'utilizzo di un'esecuzione simbolica semplificherebbe di
+molto l'analisi semantica, potendo verificare direttamente le
+relazioni tra valori in ingresso ed effetti dei gadget.
 
 Dai primi risultati ottenuti utilizzando un planner,  ci si è resi
 conto che quest'area potrebbe portare notevoli vantaggi ma che
