--- a/tesi.bib
+++ b/tesi.bib
@@ -127,10 +127,8 @@ year={96},
 }
 
 @misc{exploit-exercise,
-author= {},
-title= {},
+title={exploit-exercise},
 url = {https://exploit-exercises.com/fusion/},
-year={},
 }
 
 @TECHREPORT{Checkoway-10,
