EOL in lstlisting

--- a/architettura.tex
+++ b/architettura.tex
@@ -404,8 +404,8 @@ trovato. Come stato desiderato si imposta o, nel caso si voglia
 trovare un piano per impostare un insieme di registri, che i fluent
 rilevanti di tipo \lstinline{(reg ?r)} abbiano i valori desiderati o,
 nel caso invece si voglia trovare un piano per impostare alcune
-specifiche locazioni di memoria, che i fluent del tipo \lstinline{(mem
-  ?a)} abbiano il valore corrispondente. 
+specifiche locazioni di memoria, che i fluent del tipo \lstinline{(mem  ?a)}
+ abbiano il valore corrispondente.
 
 Un esempio, con solo un piccolo sottoinsieme dei gadge trovati
 nell'eseguibile ls è riportato nelle figure \ref{pddl:domain} e
